fix: header position and z-index fixed

--- a/src/frontend/Layout/Header/header.css
+++ b/src/frontend/Layout/Header/header.css
@@ -10,6 +10,9 @@ text-decoration: none;
 .header-bar {
   background-color: var(--accent--one-color);
   color: var(--foreground-color);
+  z-index:999;
+  position:fixed;
+  top:0;
 }
 
 .header-left-content {
@@ -56,7 +59,7 @@ text-decoration: none;
 .profile-options{
 position:absolute;
 background-color: var(--accent--three-color);
-z-index: 2;
+z-index: 3;
 right: 0;
 padding:15px;
 max-width:15rem;
